# oop_6

./: pyproject.toml
oop_6/: task_3.py
